[project]
name = "bingo"
version = "0.1.0"
description = "python"
authors = [
    {name = "Egor"}
]
requires-python = ">=3.14"
dependencies = [
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]

[black]
max-line-length = 119
exclude = ".git"

[isort]
max-line-length = 119

[mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = ".venv"